--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Standard by nguyen-thien-mulodo</title>
+    <title>sdlc by nguyen-thien-mulodo</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Standard</h1>
-        <p></p>
+        <h1>sdlc</h1>
+        <p>SDLC</p>
 
         <p class="view"><a href="https://github.com/nguyen-thien-mulodo/standard">View the Project on GitHub <small>nguyen-thien-mulodo/standard</small></a></p>
 
@@ -28,31 +28,29 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>Hello world212121
-This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+        <h2>
+<a id="mulodo-software-developement-lifecycle-process" class="anchor" href="#mulodo-software-developement-lifecycle-process" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mulodo' Software Developement Lifecycle Process</h2>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<a id="tổng-quan-mô-hình-phát-triển-phần-mêm--tại-thị-trường-việt-nam" class="anchor" href="#t%E1%BB%95ng-quan-m%C3%B4-h%C3%ACnh-ph%C3%A1t-tri%E1%BB%83n-ph%E1%BA%A7n-m%C3%AAm--t%E1%BA%A1i-th%E1%BB%8B-tr%C6%B0%E1%BB%9Dng-vi%E1%BB%87t-nam" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tổng quan mô hình phát triển phần mêm  tại thị trường Việt Nam</h3>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<a id="Ưu-điểm-của-mô-hình-phát-triển-phần-mềm-qua-dự-án-labo-so-với-hình-thức-offshore" class="anchor" href="#%C6%AFu-%C4%91i%E1%BB%83m-c%E1%BB%A7a-m%C3%B4-h%C3%ACnh-ph%C3%A1t-tri%E1%BB%83n-ph%E1%BA%A7n-m%E1%BB%81m-qua-d%E1%BB%B1-%C3%A1n-labo-so-v%E1%BB%9Bi-h%C3%ACnh-th%E1%BB%A9c-offshore" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ưu điểm của mô hình phát triển phần mềm qua dự án Labo so với hình thức offshore</h3>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<a id="Ứng-dụng-mô-hinh-phát-triển-dự-án-labo-tại-công-ty-mulodo-việt-nam" class="anchor" href="#%E1%BB%A8ng-d%E1%BB%A5ng-m%C3%B4-hinh-ph%C3%A1t-tri%E1%BB%83n-d%E1%BB%B1-%C3%A1n-labo-t%E1%BA%A1i-c%C3%B4ng-ty-mulodo-vi%E1%BB%87t-nam" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ứng dụng mô hinh phát triển dự án Labo tại công ty Mulodo Việt Nam</h3>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="qui-trình-khởi-động-1-dự-án-labo-tại-mulodo" class="anchor" href="#qui-tr%C3%ACnh-kh%E1%BB%9Fi-%C4%91%E1%BB%99ng-1-d%E1%BB%B1-%C3%A1n-labo-t%E1%BA%A1i-mulodo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Qui trình khởi động 1 dự án Labo tại Mulodo.</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h3>
+<a id="vai-trò-và-vị-trí-của-các-thành-viên" class="anchor" href="#vai-tr%C3%B2-v%C3%A0-v%E1%BB%8B-tr%C3%AD-c%E1%BB%A7a-c%C3%A1c-th%C3%A0nh-vi%C3%AAn" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vai trò và vị trí của các thành viên.</h3>
+
+<h3>
+<a id="các-tài-liệu-chuẩn-hóa-trong-qui-trình-phát-triền-phần-mềm-tại-mulodo-viet-nam" class="anchor" href="#c%C3%A1c-t%C3%A0i-li%E1%BB%87u-chu%E1%BA%A9n-h%C3%B3a-trong-qui-tr%C3%ACnh-ph%C3%A1t-tri%E1%BB%81n-ph%E1%BA%A7n-m%E1%BB%81m-t%E1%BA%A1i-mulodo-viet-nam" aria-hidden="true"><span class="octicon octicon-link"></span></a>Các tài liệu chuẩn hóa trong qui trình phát triền phần mềm tại Mulodo Viet Nam</h3>
+
+<h3>
+<a id="dự-án-mẫu" class="anchor" href="#d%E1%BB%B1-%C3%A1n-m%E1%BA%ABu" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dự án mẫu.</h3>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nguyen-thien-mulodo">nguyen-thien-mulodo</a></p>
