Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>sdlc by nguyen-thien-mulodo</title>
+    <title>Software Developement Lifecycle Process by nguyen-thien-mulodo</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>sdlc</h1>
+        <h1>Software Developement Lifecycle Process</h1>
         <p>SDLC</p>
 
         <p class="view"><a href="https://github.com/nguyen-thien-mulodo/standard">View the Project on GitHub <small>nguyen-thien-mulodo/standard</small></a></p>
